[gd_scene load_steps=2 format=3 uid="uid://b2errpxsd3ark"]

[ext_resource type="Script" uid="uid://bah1w55hl533k" path="res://scenes/proving_grounds/scripts/unified_ui.gd" id="1_4k0bh"]

[node name="UnifiedUI" type="CanvasLayer"]
script = ExtResource("1_4k0bh")
status_label = NodePath("Control/VBoxContainer/StatusLabel")
log_container = NodePath("Control/VBoxContainer/LogContainer")
spawn_button = NodePath("Control/VBoxContainer/Buttons/SpawnButton")
clear_button = NodePath("Control/VBoxContainer/Buttons/ClearButton")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0

[node name="StatusLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Status: Ready"

[node name="Buttons" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="SpawnButton" type="Button" parent="Control/VBoxContainer/Buttons"]
layout_mode = 2
text = "Spawn Entity"

[node name="ClearButton" type="Button" parent="Control/VBoxContainer/Buttons"]
layout_mode = 2
text = "Clear All"

[node name="LogContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
